# Rust_library_ex

./: Cargo.toml  Makefile  employee.json  lyrics.txt  text.txt
benches/: benchmark.rs
src/: lib.rs  main.rs
src/cargo/: mod.rs
src/cli/: command.rs  lib2.rs  mod.rs
src/interface/: mod.rs  user_interface.rs
src/macro_mod/: mod.rs  mod_macro.rs
src/modules/: mod.rs  mod_comments.rs  mod_drop.rs  mod_error.rs  mod_ffi.rs  mod_generics.rs  mod_hashmap.rs  mod_iter.rs  mod_lifetime.rs  mod_match.rs  mod_oop.rs  mod_oop2.rs  mod_rc.rs  mod_smart_pointer.rs  mod_string.rs  mod_struct.rs  mod_test.rs  mod_trait.rs  mod_type_alias.rs  mod_unsafe.rs  mod_vec.rs  root.rs
src/practice/: arg_fn.rs  closure.rs  closure_generics.rs  decode_algorithm.rs  if_let.rs  lib.rs  mod.rs
src/smart_pointer/: mod.rs  rc_weak.rs  ref_cell.rs  smt_ptr.rs
src/thread/: concurrent.rs  mod.rs
src/trait_associated_generic/: mod.rs  mod_associated_generic.rs
src/trait_relation/: mod.rs  mod_trait.rs
tests/: integration_test.rs
tests/common/: mod.rs
workspace/: Cargo.toml
workspace/work/src/: main.rs
