[package]
name = "rust2"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["srrrs"]
description = "crate library description"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-serialize = "0.3"
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
panic = 'abort'